--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         <section class="my-24 font-sora p-2 lg:p-8 bg-[#EFEBE3]">
             <h3 class="font-semibold text-2xl lg:text-4xl text-tittle-primary p-2 lg:p-4">Popular Products</h3>
             <div class="flex flex-col lg:flex-row  gap-2 lg:gap-4 justify-between">
-                <div class="bg-gradient-to-br from-[#53DB3A] to-[#EFEBE3]  rounded-xl ml-0 lg:ml-4">
+                <div class="bg-gradient-to-br from-[#53DB3A] to-[#EFEBE3] rounded-xl ml-0 lg:ml-4">
                     <div class="relative top-16">
-                        <h3 class="font-medium  py-4  px-4 text-2xl lg:text-4xl  text-white">30% Off</h3>
+                        <h3 class="font-semibold  py-4  px-4 text-2xl lg:text-4xl  text-white">30% Off</h3>
                         <p class="text-[10px] px-4 lg:text-base font-normal text-white">Discover a world full of treats,
                             toys and <br> essentials handpicked for you </p>
                         <button class="btn mt-4 mx-4  bg-white hover:bg-blue-700">Buy Now</button>
                     </div>
-                    <div class="relative"><img src="c2-assets/vegetable-offer.png" class="relative left-9" alt="Offer">
+                    <div class="relative justify-items-end"><img src="c2-assets/vegetable-offer.png" class="relative " alt="Offer">
                     </div>
                 </div>
 
