--- a/index.html
+++ b/index.html
@@ -44,8 +44,65 @@
 
 <body>
 
-    <head class="font-sora"></head>
-    <main class="">
+    <header class="font-sora ">
+        <section class="bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3] ">
+            <div class="navbar px-2 lg:px-8 pt-2 lg:pt-8 lg:border-0 border-y-[0.5px] border-[#179800]">
+                <div class="navbar-start">
+                    <img src="c2-assets/logo-header.png" alt="logo-header" class="hidden lg:block">
+                    <img src="c2-assets/Group.png" alt="logo-header" class="lg:hidden block">
+                </div>
+
+                <!-- Menu-->
+                <div class="navbar-center hidden lg:block ">
+                    <ul class="flex gap-4 k">
+                        <li><a class="text-xl font-normal text-primary">Product</a></li>
+                        <li><a class="text-xl font-normal text-primary">Service</a></li>
+                        <li><a class="text-xl font-normal text-primary">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!--Menu End-->
+                <div class="navbar-end">
+                    <div class="block lg:hidden"><i class="fa-solid fa-bars" style="color: #179800;"></i></div>
+                    <div class="hidden lg:flex gap-2">
+                        <div class="my-auto"><svg width="24.019653" height="24.019722" viewBox="0 0 24.0197 24.0197"
+                                fill="none" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path id="Vector"
+                                    d="M23.73 22.32L17.77 16.35C19.39 14.36 20.19 11.82 20 9.26C19.81 6.7 18.64 4.31 16.73 2.58C14.83 0.86 12.33 -0.07 9.76 0C7.19 0.06 4.75 1.11 2.93 2.93C1.11 4.75 0.06 7.19 0 9.76C-0.07 12.33 0.86 14.83 2.58 16.73C4.31 18.64 6.7 19.81 9.26 20C11.82 20.19 14.36 19.39 16.35 17.77L22.32 23.73C22.51 23.92 22.76 24.02 23.02 24.01C23.29 24.01 23.54 23.91 23.72 23.72C23.91 23.54 24.01 23.29 24.01 23.02C24.02 22.76 23.92 22.51 23.73 22.32ZM10.03 18.03C8.44 18.03 6.9 17.56 5.58 16.68C4.27 15.8 3.24 14.55 2.64 13.09C2.03 11.63 1.87 10.02 2.18 8.47C2.49 6.91 3.25 5.49 4.37 4.37C5.49 3.25 6.91 2.49 8.47 2.18C10.02 1.87 11.63 2.03 13.09 2.64C14.55 3.24 15.8 4.27 16.68 5.58C17.56 6.9 18.03 8.44 18.03 10.03C18.02 12.15 17.18 14.18 15.68 15.68C14.18 17.18 12.15 18.02 10.03 18.03Z"
+                                    fill="#000000" fill-opacity="1.000000" fill-rule="nonzero" />
+                            </svg></div>
+                        <div class="my-auto"><svg width="28.015625" height="24.000004" viewBox="0 0 28.0156 24"
+                                fill="none" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                                <path id="Vector"
+                                    d="M26.68 1.09L27.47 1.09C27.77 1.09 28.01 0.84 28.01 0.54C28.01 0.24 27.77 0 27.47 0L24.06 0C23.83 0 23.62 0.14 23.54 0.35L22.2 4.02L2.72 4.02C1 4.02 -0.29 5.6 0.05 7.29L1.22 13.08C1.45 14.23 2.39 15.1 3.55 15.25L4.72 15.41L6.34 15.63L5.88 14.05L5.42 12.47C5.02 11.07 6.06 9.68 7.52 9.68L21.29 9.68L22.81 5.52L23.09 4.77C23.09 4.76 23.09 4.75 23.1 4.74L24.29 1.5L24.3 1.46L24.44 1.09L26.68 1.09ZM21.21 5.52L20.24 8.18L7.52 8.18Q7.03 8.18 6.58 8.3Q6.19 8.4 5.83 8.58Q5.48 8.77 5.18 9.01Q4.84 9.29 4.57 9.65Q4.31 10 4.13 10.4Q3.98 10.76 3.9 11.15Q3.83 11.55 3.84 11.95Q3.85 12.42 3.98 12.89L4.26 13.83L3.76 13.76Q3.51 13.73 3.31 13.62Q3.17 13.55 3.06 13.44Q2.91 13.31 2.82 13.14Q2.73 12.98 2.69 12.79L1.52 6.99Q1.48 6.81 1.5 6.63Q1.51 6.54 1.53 6.44Q1.56 6.34 1.61 6.24Q1.67 6.1 1.77 5.97Q1.87 5.85 2 5.76Q2.09 5.69 2.19 5.64Q2.28 5.6 2.37 5.57Q2.54 5.52 2.72 5.52L21.21 5.52Z"
+                                    fill="#111111" fill-opacity="1.000000" fill-rule="evenodd" />
+                                <path id="Vector"
+                                    d="M3.26 19.68C2.27 19.88 1.52 20.76 1.52 21.81C1.52 23.02 2.5 24 3.7 24C4.77 24 5.65 23.23 5.85 22.22C5.87 22.09 5.88 21.95 5.88 21.81C5.88 21.58 5.85 21.35 5.78 21.13C5.73 20.99 5.67 20.85 5.59 20.72L15.97 20.72C15.89 20.85 15.83 20.99 15.79 21.13C15.72 21.35 15.68 21.58 15.68 21.81C15.68 21.95 15.69 22.09 15.72 22.22C15.91 23.23 16.79 24 17.86 24C18.92 24 19.81 23.23 20 22.22C20.03 22.09 20.04 21.95 20.04 21.81C20.04 21.58 20 21.35 19.93 21.13C19.88 20.99 19.82 20.85 19.75 20.72L20.81 20.72C21 20.72 21.18 20.69 21.35 20.64C22.5 20.25 22.89 18.64 21.82 17.8L20.34 16.63L20.18 16.51C20.1 16.45 20.01 16.41 19.92 16.39L18.88 16.25L19.02 15.86L19.41 14.81L20.34 12.27L20.89 10.77L7.52 10.77C6.79 10.77 6.27 11.47 6.47 12.16L7.53 15.79L16.97 17.09L18.05 17.24C18.05 17.24 18.06 17.24 18.07 17.24L19.62 17.45L20.48 18.13L20.53 18.17L21.14 18.66C21.55 18.98 21.32 19.63 20.81 19.63L3.7 19.63C3.55 19.63 3.4 19.65 3.26 19.68ZM17.46 21.13L18.25 21.13L18.45 21.47Q18.49 21.54 18.51 21.61Q18.54 21.71 18.54 21.81Q18.54 21.95 18.49 22.07Q18.44 22.2 18.34 22.3Q18.24 22.4 18.12 22.45Q18 22.5 17.86 22.5Q17.72 22.5 17.6 22.45Q17.48 22.4 17.38 22.3Q17.28 22.2 17.23 22.07Q17.18 21.95 17.18 21.81Q17.18 21.71 17.21 21.62Q17.23 21.54 17.27 21.47L17.46 21.13ZM17.5 15.65L18.74 12.27L8.06 12.27L8.69 14.44L17.5 15.65ZM4.1 21.13L3.7 21.13Q3.56 21.13 3.44 21.18Q3.32 21.23 3.22 21.33Q3.12 21.43 3.07 21.55Q3.02 21.67 3.02 21.81Q3.02 21.95 3.07 22.07Q3.12 22.2 3.22 22.3Q3.32 22.4 3.44 22.45Q3.56 22.5 3.7 22.5Q3.84 22.5 3.96 22.45Q4.08 22.4 4.18 22.3Q4.28 22.2 4.33 22.07Q4.38 21.95 4.38 21.81Q4.38 21.71 4.36 21.62Q4.33 21.54 4.29 21.47L4.1 21.13Z"
+                                    fill="#111111" fill-opacity="1.000000" fill-rule="evenodd" />
+                            </svg></div>
+                        <button
+                            class="px-6 py-3 border border-[#179800] my-auto rounded-lg text-xl font-normal text-primary bg-white hover:bg-blue-700">Log
+                            In</button>
+                        <button
+                            class="px-6 py-3 rounded-lg text-xl my-auto font-normal bg-[#179800] hover:bg-blue-700 text-white">Register</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="px-4 lg:px-20 pt-4 lg:pt-10">
+                <h3 class="text-center font-semibold text-primary animate-bounce text-3xl lg:text-5xl my-4 lg:my-10">Freshness <span
+                        class="text-[#179800]">You Can
+                        Count</span> On, Prices You’ll Love!</h3>
+                <p class="font-light lg:font-normal lg:my-8 my-4 text-primary text-base lg:text-xl text-center">Shop
+                    your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you
+                    covered every day!</p>
+                <img alt=" Vegetable-busket" class="mx-auto" src="c2-assets/hero-vegetables.png">
+            </div>
+        </section>
+    </header>
+    <main>
         <!--SERVICES-->
         <section class="my-24 font-sora p-2 lg:p-8">
             <h3 class="font-semibold text-tittle-primary text-left text-2xl lg:text-4xl p-2 lg:p-4">Services</h3>
@@ -81,9 +138,10 @@
                         <h3 class="font-semibold  py-4  px-4 text-2xl lg:text-4xl  text-white">30% Off</h3>
                         <p class="text-[10px] px-4 lg:text-base font-normal text-white">Discover a world full of treats,
                             toys and <br> essentials handpicked for you </p>
-                        <button class="btn mt-4 mx-4  bg-white hover:bg-blue-700">Buy Now</button>
+                        <button class="btn mt-4 mx-4 bg-white hover:bg-blue-700">Buy Now</button>
                     </div>
-                    <div class="relative justify-items-end"><img src="c2-assets/vegetable-offer.png" class="relative " alt="Offer">
+                    <div class="relative justify-items-end"><img src="c2-assets/vegetable-offer.png" class="relative "
+                            alt="Offer">
                     </div>
                 </div>
 
@@ -280,9 +338,10 @@
                     <div class="pt-4 pl-5 ">
                         <img alt="Dawat-logo" class="lg:my-4 my-2" src="c2-assets/dawat-logo.png">
                         <button
-                            class="bg-[#63B76D] my-2 lg:my-4 text-[10px] lg:text-sm rounded-lg text-white p-2 lg:p-4">Cook
+                            class="bg-[#63B76D] hover:bg-blue-700 my-2 lg:my-4 text-[10px] lg:text-sm rounded-lg text-white p-2 lg:p-4">Cook
                             Exotic Dishes</button>
-                        <h3 class="font-normal text-white my-2 lg:my-4 text-base lg:text-2xl">UP TO <span class="font-bold">20%
+                        <h3 class="font-normal text-white my-2 lg:my-4 text-base lg:text-2xl">UP TO <span
+                                class="font-bold">20%
                                 OFF</span></h3>
                     </div>
                     <div class="pt-4">
@@ -294,9 +353,10 @@
                     <div class="pt-2 pl-5 ">
                         <img alt="India-gate-logo" class=" my-2 lg:my-4" src="c2-assets/india-gate-logo.png">
                         <button
-                            class="bg-[#2A4D97] my-2 lg:my-4 text-[10px] lg:text-sm rounded-lg text-white p-2 lg:p-4">Cook
-                            Exotic Dishes</button>
-                        <h3 class="font-normal text-white my-2 lg:my-4 text-base lg:text-2xl">UP TO <span class="font-bold">20%
+                            class="bg-[#2A4D97] hover:bg-blue-700 my-2 lg:my-4 text-[10px] lg:text-sm rounded-lg text-white p-2 lg:p-4">
+                            World’s No.1 Rice</button>
+                        <h3 class="font-normal text-white my-2 lg:my-4 text-base lg:text-2xl">UP TO <span
+                                class="font-bold">40%
                                 OFF</span></h3>
                     </div>
                     <div class="pt-2">
@@ -393,8 +453,22 @@
                 </div>
             </div>
         </section>
+        <section class="my-24 font-sora p-2 lg:p-8">
+            <div class=" bg-[#EFEBE3] rounded-2xl lg:rounded-3xl flex flex-col lg:flex-row justify-between">
+                <div class="p-4 lg:p-6"><img alt="Vegetable-busket" class="" src="c2-assets/vegetable-busket.png"></div>
+                <div class="p-4 lg:p-6">
+                    <h3 class=" font-bold lg:font-semibold my-2 lg:my-4 text-[#179800] lg:text-primary text-xl lg:text-4xl text-center lg:text-left">Get Grocery News!</h3>
+                    <p class="font-normal text-base lg:text-xl mb-2 lg:mb-4 text-primary text-center lg:text-left">Exclusive training tips, ticks, product deals and more.</p>
+                    <input type="text" placeholder="Type here" class=" my-4 input input-bordered rounded-md w-full " />
+                  <div class=" flex justify-center lg:block"> <button class="px-6 py-3 rounded-md lg:rounded-lg text-sm lg:text-xl my-2 lg:my-4 font-normal bg-[#179800] hover:bg-blue-700 text-white">Subscribe</button></div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="bg-[#179800] font-sora p-2 lg:p-8">
+
+
+    </footer>
 </body>
 
 </html>
