--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 </div>
             </div>
         </section>
-        <section class="my-24 font-sora p-2 lg:p-8">
+       <!-- <section class="my-24 font-sora p-2 lg:p-8">
             <div class=" bg-[#EFEBE3] rounded-2xl lg:rounded-3xl flex flex-col lg:flex-row justify-between">
                 <div class="p-4 lg:p-6"><img alt="Vegetable-busket" class="" src="c2-assets/vegetable-busket.png"></div>
                 <div class="p-4 lg:p-6">
@@ -463,10 +463,28 @@
                   <div class=" flex justify-center lg:block"> <button class="px-6 py-3 rounded-md lg:rounded-lg text-sm lg:text-xl my-2 lg:my-4 font-normal bg-[#179800] hover:bg-blue-700 text-white">Subscribe</button></div>
                 </div>
             </div>
-        </section>
+        </section>-->
     </main>
-    <footer class="bg-[#179800] font-sora p-2 lg:p-8">
-
+    <footer class=" font-sora relative bg-[#179800] p-4 lg:p-28 ">
+        <div class="grid grid-flow-row lg:grid-flow-col gap-12 lg:gap-24 ">
+            <div class="grid">
+                <img alt="logo-footer" src="c2-assets/logo-footer.png" class="">
+                <p class="font-normal text-[#FFFFFFB3] text-base lg:text-xl">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+            </div>
+            <div class="grid  "> 
+                <a class="link link-hover text-[#EFEBE3] font-normal text-base lg:text-xl ">Product</a>
+                <a class="link link-hover text-[#EFEBE3] font-normal text-base lg:text-xl">Services</a>
+                <a class="link link-hover text-[#EFEBE3] font-normal text-base lg:text-xl">Contact Us</a></div>
+                <div class="items-end
+                content-end"><h3 class="font-medium mb-4 text-sm lg:text-base text-[#EFEBE3]">Follow Us</h3>
+                    <div class="flex gap-4 lg:gap-5">
+                        <img src="c2-assets/Vector.png" class="" alt="Socials">
+                        <img src="c2-assets/Vector (1).png" class="" alt="Socials">
+                        <img src="c2-assets/Vector (2).png" class="" alt="Socials">
+                        <img src="c2-assets/Vector (3).png" class="" alt="Socials">
+                    </div>
+                </div>
+        </div>
 
     </footer>
 </body>
