--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </div>
         </section>
         <!--FAQ Section-->
-        <section class="my-24 font-sora p-2 lg:p-8 bg-[#EFEBE3]">
+        <section class="mt-24 mb-72 font-sora p-2 lg:p-8 bg-[#EFEBE3]">
             <h2 class="font-semibold text-tittle-primary  text-2xl lg:text-4xl text-center my-8">
                 Clients Question
             </h2>
@@ -453,19 +453,20 @@
                 </div>
             </div>
         </section>
-       <!-- <section class="my-24 font-sora p-2 lg:p-8">
+       
+    </main>
+    <footer class=" font-sora relative bg-[#179800] px-4 lg:px-28 pb-4 lg:pb-28 pt-4 ">
+        <section class="my-24 font-sora p-2 relative lg:p-8 translate-y-[-75%]">
             <div class=" bg-[#EFEBE3] rounded-2xl lg:rounded-3xl flex flex-col lg:flex-row justify-between">
                 <div class="p-4 lg:p-6"><img alt="Vegetable-busket" class="" src="c2-assets/vegetable-busket.png"></div>
                 <div class="p-4 lg:p-6">
                     <h3 class=" font-bold lg:font-semibold my-2 lg:my-4 text-[#179800] lg:text-primary text-xl lg:text-4xl text-center lg:text-left">Get Grocery News!</h3>
                     <p class="font-normal text-base lg:text-xl mb-2 lg:mb-4 text-primary text-center lg:text-left">Exclusive training tips, ticks, product deals and more.</p>
-                    <input type="text" placeholder="Type here" class=" my-4 input input-bordered rounded-md w-full " />
+                    <input type="text" placeholder="Your Email" class=" my-4 input input-bordered rounded-md w-full " />
                   <div class=" flex justify-center lg:block"> <button class="px-6 py-3 rounded-md lg:rounded-lg text-sm lg:text-xl my-2 lg:my-4 font-normal bg-[#179800] hover:bg-blue-700 text-white">Subscribe</button></div>
                 </div>
             </div>
-        </section>-->
-    </main>
-    <footer class=" font-sora relative bg-[#179800] p-4 lg:p-28 ">
+        </section>
         <div class="grid grid-flow-row lg:grid-flow-col gap-12 lg:gap-24 ">
             <div class="grid">
                 <img alt="logo-footer" src="c2-assets/logo-footer.png" class="">
