--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <div class="collapse collapse-plus bg-white my-4">
                         <input placeholder="accordian" type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-lg font-semibold text-tittle-primary">
-                            How can to place an online order
+                            How  to place an online order
                         </div>
                         <div class="collapse-content">
                             <p class="text-sm">
@@ -455,7 +455,7 @@
         </section>
        
     </main>
-    <footer class=" font-sora relative bg-[#179800] px-4 lg:px-28 pb-4 lg:pb-28 pt-4 ">
+    <footer class=" font-sora relative mt-24 bg-[#179800] px-4 lg:px-28 pb-4 lg:pb-28 pt-4 ">
         <section class="my-24 font-sora p-2 relative lg:p-8 translate-y-[-75%]">
             <div class=" bg-[#EFEBE3] rounded-2xl lg:rounded-3xl flex flex-col lg:flex-row justify-between">
                 <div class="p-4 lg:p-6"><img alt="Vegetable-busket" class="" src="c2-assets/vegetable-busket.png"></div>
